--- a/.releaserc
+++ b/.releaserc
@@ -2,10 +2,16 @@
   "plugins": [
     "@semantic-release/commit-analyzer",
     "@semantic-release/release-notes-generator",
+    "@semantic-release/changelog",
+    "@semantic-release/npm",
     ["@semantic-release/git", {
-      "message": "chore(release): ${nextRelease.version} \n\n${nextRelease.notes}"
+        "assets": [
+            "package.json",
+            "CHANGELOG.md"
+        ],
+        "message": "chore(release): ${nextRelease.version} \n\n${nextRelease.notes}"
     }],
-    "@semantic-release/gitlab"
+    "@semantic-release/github"
   ],
   "preset": "angular"
 }
