--- a/.releaserc
+++ b/.releaserc
@@ -11,7 +11,7 @@
         ],
         "message": "chore(release): ${nextRelease.version} \n\n${nextRelease.notes}"
     }],
-    "@semantic-release/github"
+    "@semantic-release/gitlab"
   ],
   "preset": "angular"
 }
