--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@types/node": "^17.0.40",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@types/redux-logger": "^3.0.9",
     "@typescript-eslint/eslint-plugin": "^5.30.0",
     "@typescript-eslint/parser": "^5.30.0",
     "@vitejs/plugin-react": "^1.3.0",
@@ -60,6 +61,7 @@
     "eslint-plugin-react": "^7.30.1",
     "husky": "^8.0.1",
     "prettier": "^2.7.0",
+    "redux-logger": "^3.0.6",
     "stylelint": "^14.9.1",
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-prettier-scss": "^0.0.1",
