--- a/package.json
+++ b/package.json
@@ -28,16 +28,15 @@
   "license": "MIT",
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
-    "@lottiefiles/lottie-player": "^1.5.7",
     "@lottiefiles/react-lottie-player": "^3.4.7",
     "@reduxjs/toolkit": "^1.8.2",
-    "@types/js-cookie": "2.2.1",
+    "@types/js-cookie": "^2.2.1",
     "@types/react-css-modules": "^4.6.4",
     "ahooks": "^3.6.2",
     "antd": "^5.3.1",
     "axios": "^0.27.2",
     "dayjs": "^1.11.3",
-    "js-cookie": "2.2.1",
+    "js-cookie": "^2.2.1",
     "react": "^18.0.0",
     "react-css-modules": "^4.7.11",
     "react-dom": "^18.0.0",
