--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "stylelint-scss": "^4.2.0",
     "typescript": "^4.6.3",
     "vite": "^2.9.5",
+    "vite-plugin-html": "^3.2.0",
     "vite-plugin-svg-icons": "^2.0.1",
     "yapi-to-typescript": "^3.34.1"
   },
