--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "typescript": "^4.6.3",
     "vite": "^2.9.5",
     "vite-plugin-html": "^3.2.0",
+    "vite-plugin-progress": "^0.0.6",
     "vite-plugin-svg-icons": "^2.0.1",
     "yapi-to-typescript": "^3.34.1"
   },
