feat(view): initial

--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "preview": "vite preview",
     "prettier": "prettier --cache --check **/**/*.{tsx,ts,js}",
     "prettier:fix": "prettier --cache --write **/**/*.{tsx,ts,js}",
-    "stylelint": "npx stylelint **/*.scss --cache",
-    "stylelint:fix": "npx stylelint **/*.scss --fix --cache",
+    "stylelint": "npx stylelint **/*{.css,.scss} --cache",
+    "stylelint:fix": "npx stylelint **/*{.css,.scss} --fix --cache",
     "eslint": "npx eslint src --cache --ext .js,.jsx,.ts,.tsx",
     "eslint:fix": "npx eslint src --fix --cache --ext  .js,.jsx,.ts,.tsx",
     "prepare": "husky install",
