--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -3,7 +3,7 @@
   "trailingComma": "all",
   "singleQuote": true,
   "printWidth": 120,
-  "tabWidth": 4,
+  "tabWidth": 2,
   "endOfLine": "auto",
   "bracketSameLine": true,
   "bracketSpacing": true,
@@ -18,20 +18,21 @@
       ],
       "options": {
         "parser": "json",
-        "tabWidth": 4
+        "tabWidth": 2
       }
     },
     {
       "files": "*.{css,sass,scss,less}",
       "options": {
         "parser": "css",
-        "tabWidth": 4
+        "tabWidth": 2
       }
     },
     {
       "files": "*.{ts,tsx}",
       "options": {
-        "parser": "typescript"
+        "parser": "typescript",
+        "tabWidth": 2
       }
     }
   ],
