--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -2,7 +2,9 @@
   "extends": [
     "stylelint-config-standard",
     "stylelint-config-standard-scss",
-    "stylelint-config-recess-order"
+    "stylelint-config-recess-order",
+    "stylelint-config-prettier",
+    "stylelint-config-prettier-scss"
   ],
   "plugins": [
     "stylelint-order",
