--- a/package.json
+++ b/package.json
@@ -69,6 +69,8 @@
     "@typescript-eslint/parser": "^5.30.0",
     "@vitejs/plugin-react": "^1.3.0",
     "eslint": "^8.18.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.30.1",
     "husky": "^8.0.1",
     "lint-staged": "^13.2.0",
