--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "vite",
+    "prebuild": "node imagemin.mjs",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "prettier": "prettier --cache --check **/**/*.{tsx,ts,js}",
@@ -22,7 +23,7 @@
     "**/*.{js,jsx,ts,tsx}": [
       "eslint --fix --cache"
     ],
-    "**/*.{js,jsx,ts,tsx,cjs,json,less,scss,css,md}": [
+    "**/*.{js,jsx,ts,tsx,cjs,less,scss,css,md}": [
       "prettier --write --cache"
     ],
     "**/*.{less,scss,css}": [
@@ -68,14 +69,24 @@
     "@typescript-eslint/eslint-plugin": "^5.30.0",
     "@typescript-eslint/parser": "^5.30.0",
     "@vitejs/plugin-react": "^1.3.0",
+    "chalk": "^5.2.0",
     "eslint": "^8.18.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.30.1",
+    "globby": "^13.1.3",
     "husky": "^8.0.1",
+    "imagemin": "^8.0.1",
+    "imagemin-gifsicle": "^7.0.0",
+    "imagemin-mozjpeg": "^10.0.0",
+    "imagemin-optipng": "^8.0.0",
+    "imagemin-pngquant": "^9.0.2",
+    "imagemin-svgo": "^10.0.1",
     "lint-staged": "^13.2.0",
+    "ora": "^6.3.0",
     "prettier": "^2.7.0",
     "redux-logger": "^3.0.6",
+    "slash": "^5.0.0",
     "stylelint": "^14.9.1",
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-prettier-scss": "^0.0.1",
