feat(view): initial

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "realai-react-template",
+  "name": "shengshu-react-template",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
