--- a/package.json
+++ b/package.json
@@ -43,8 +43,6 @@
     "@ant-design/icons": "^4.7.0",
     "@lottiefiles/react-lottie-player": "^3.4.7",
     "@reduxjs/toolkit": "^1.8.2",
-    "@types/js-cookie": "^2.2.1",
-    "@types/react-css-modules": "^4.6.4",
     "ahooks": "^3.6.2",
     "antd": "^5.3.1",
     "axios": "^0.27.2",
@@ -52,19 +50,19 @@
     "dayjs": "^1.11.3",
     "js-cookie": "^2.2.1",
     "react": "^18.0.0",
-    "react-css-modules": "^4.7.11",
     "react-dom": "^18.0.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
-    "redux": "^4.2.0",
-    "sass": "^1.51.0"
+    "redux": "^4.2.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.0.3",
     "@commitlint/config-conventional": "^17.0.3",
     "@trivago/prettier-plugin-sort-imports": "^3.2.0",
+    "@types/js-cookie": "^2.2.1",
     "@types/node": "^17.0.40",
     "@types/react": "^18.0.0",
+    "@types/react-css-modules": "^4.6.4",
     "@types/react-dom": "^18.0.0",
     "@types/redux-logger": "^3.0.9",
     "@typescript-eslint/eslint-plugin": "^5.30.0",
@@ -86,7 +84,9 @@
     "lint-staged": "^13.2.0",
     "ora": "^6.3.0",
     "prettier": "^2.7.0",
+    "react-css-modules": "^4.7.11",
     "redux-logger": "^3.0.6",
+    "sass": "^1.51.0",
     "slash": "^5.0.0",
     "stylelint": "^14.9.1",
     "stylelint-config-prettier": "^9.0.3",
@@ -96,8 +96,8 @@
     "stylelint-config-standard-scss": "^4.0.0",
     "stylelint-order": "^5.0.0",
     "stylelint-scss": "^4.2.0",
-    "typescript": "^4.6.3",
-    "vite": "^2.9.5",
+    "typescript": "^4.9.5",
+    "vite": "^2.9.13",
     "vite-plugin-html": "^3.2.0",
     "vite-plugin-progress": "^0.0.6",
     "vite-plugin-svg-icons": "^2.0.1",
